9 de agosto:
    - Iniciado estudos do pg
    - Criado rota para teste
    - Adicionado log de rotas, e de consultas no sql
    - Criado uma função para abstrair queries sem transaction
    - Adicionado Helmet para maior segurança da aplicação
    - Adicionado compression para melhorar a compressão das rotas(compacta as rotas para GZIP)

10 de agosto:
    - Adicionado log de queries
    - Adicionado Login e registro de usuários
    - Adicionado envio de email de reset de senha
    - Adicionado envio de SMS de reset de senha
    - Adicionado tempo de expiração do código de resetar a senha
    - Adicionando alterar senha via código