@@ -1,5 +1,8 @@
-* adicionar imagem do produto na tabela products
+* adicionar imagem do produto na tabela products - Ok
+* adicionar tabela de formas de pagamento - Ok
+* adicionar um relatório
 
+grupo, produtos, usuarios(ja feito), metódo de pagamento
 
 Arquitetura:
   * MVC
