@@ -1,6 +1,7 @@
-process.env.TZ = 'America/Sao_Paulo';
+process.env.TZ = "America/Sao_Paulo";
 require("dotenv").config();
 const express = require("express");
+const jwt = require("jsonwebtoken");
 const cookie_parser = require("cookie-parser");
 const db = require("./model/db");
 const login = require("./controllers/login");
@@ -9,7 +10,6 @@ const resetsms = require("./controllers/sendsms");
 const resetpass = require("./controllers/resetpass");
 const bcrypt = require("bcrypt");
 const crypto = require("crypto");
-const useragent = require("express-useragent");
 const { detect } = require("detect-browser");
 const os = require("os");
 const browser = detect();
@@ -17,12 +17,11 @@ const app = express();
 
 const router = express.Router();
 
-app.use(useragent.express());
 app.use(express.urlencoded({ extended: false }));
 app.use(express.json());
 app.use(cookie_parser("1234"));
 
-router.get("/test", async (req, res) => {
+router.get("/test", verifyToken, async (req, res) => {
   const result = await db.query("SELECT * from users", []);
   res.send(result.rows);
 });
@@ -44,18 +43,39 @@ router.post("/login", async (req, res) => {
   );
   if (result.rows.length >= 1) {
     try {
-      const loginuser = await login.LoginUser(
-        result.rows[0].password,
-        password
-      );
+      await login.LoginUser(result.rows[0].password, password);
       //console.log(result.rows);
-      res.send(loginuser);
+      const token = jwt.sign(
+        {
+          id: result.rows[0].id,
+          email: email,
+          name: result.rows[0].first_name,
+          roleID: result.rows[0].role_id,
+        },
+        process.env.SECRET
+      );
+      res.cookie("usertoken", token, {
+        httpOnly: true,
+      });
+      jwt.verify(token, process.env.SECRET, (err, decoded) => {
+        if (err) {
+          console.log(err);
+          res.status(401).send("Unauthorized");
+        } else {
+          console.log(decoded);
+          res.send(true);
+        }
+      });
     } catch (err) {
       res.send(err);
     }
   } else {
     res.send("0");
   }
+});
+
+router.post("/logout", (req, res) => {
+  res.status(202).clearCookie("usertoken").send("cookies cleared");
 });
 
 router.post("/register", async (req, res) => {
@@ -162,15 +182,15 @@ router.post("/resetpass", async (req, res) => {
   const token = req.body.token;
   const now = new Date().toString();
   try {
-    const result = await db.query("SELECT * from users where reset_code = $1", [token]);
-    if(result.rows.length == 0) {
-      res.send("Token not found")
-    }
-    else if(result.rows[0].expire_time > now) {
+    const result = await db.query("SELECT * from users where reset_code = $1", [
+      token,
+    ]);
+    if (result.rows.length == 0) {
+      res.send("Token not found");
+    } else if (result.rows[0].expire_time > now) {
       console.log(now);
       res.send("Token expired");
-    }
-    else {
+    } else {
       await resetpass.resetPass(newpass, result.rows[0].reset_code);
       res.send("Password changed");
     }
@@ -178,6 +198,93 @@ router.post("/resetpass", async (req, res) => {
     res.send(err);
   }
 });
+
+router.post("/addproduct", verifyToken, async (req, res) => {
+  const group_id = req.body.group_id;
+  const name = req.body.name;
+  const price = req.body.price;
+  const description = req.body.description;
+  try {
+    const result = await db.query(
+      "INSERT INTO products(group_id, name, price, description) VALUES ($1, $2, $3, $4) RETURNING *",
+      [group_id, name, price, description]
+    );
+    if(result == 23503) {
+      res.send("Invalid Product Group ID");
+    }
+    else {
+      res.send(result.rows[0]);
+    }
+  } catch (err) {
+    res.send(err);
+  }
+});
+
+router.post("/addgroup", verifyToken, async (req, res) => {
+  const name = req.body.name;
+  try {
+    const result = await db.query(
+      "INSERT INTO products_group(name) VALUES ($1) RETURNING *",
+      [name]
+    );
+    if(result == 23505) {
+      res.send("Group Name already exists");
+    }
+    else {
+      res.send(result.rows[0]);
+    }
+  } catch (err) {
+    res.send(err);
+  }
+});
+
+router.post("/addprovider", verifyToken, async (req, res) => {
+  const document = req.body.document;
+  const name = req.body.name;
+  const country = req.body.country;
+  const state = req.body.state;
+  const product_type = req.body.product_type;
+  const phone = req.body.phone;
+  const zip_code = req.body.zip_code;
+  try {
+    const result = await db.query(
+      "INSERT INTO providers(document, name, country, state, product_type, phone, zip_code) VALUES ($1, $2, $3, $4, $5, $6, $7) RETURNING *",
+      [document, name, country, state, product_type, phone, zip_code]
+    );
+    if(result == 23505) {
+      res.send("Document already exists");
+    }
+    else {
+      res.send(result.rows[0]);
+    }
+  } catch (err) {
+    res.send(err);
+  }
+});
+
+router.post("/addcode", verifyToken, async (req, res) => {
+  const code = req.body.code;
+  const discount = req.body.discount;
+  const type_discount = req.body.type_discount;
+  try {
+    const result = await db.query(
+      "INSERT INTO promotional_codes(code, discount, type_discount) VALUES ($1, $2, $3) RETURNING *",
+      [code, discount, type_discount]
+    );
+    if(result == 23505) {
+      res.send("Code already exists");
+    }
+    else if(result == 23514) {
+      res.send("Invalid discount type");
+    }
+    else {
+      res.send(result.rows[0]);
+    }
+  } catch (err) {
+    res.send(err);
+  }
+});
+
 
 router.delete("/deleteaccount", async (req, res) => {
   const email = req.session.email;
@@ -188,5 +295,21 @@ router.delete("/deleteaccount", async (req, res) => {
     res.send(err);
   }
 });
+
+function verifyToken(req, res, next) {
+  jwt.verify(req.cookies.usertoken, process.env.SECRET, (err, decoded) => {
+    if (err) {
+      console.log(`${err.name}: ${err.message}`);
+      return res.status(401).send("Unauthorized");
+    } else {
+      if (req.url === "/addproduct" || req.url === "/addgroup" && decoded.roleID != 1) {
+        return res.status(401).send("Unauthorized");
+      } else {
+        //console.log(`Valid Token and usertype`);
+        next();
+      }
+    }
+  });
+}
 
 module.exports = router;
